--- a/src/components/button-icon/ButtonIcon.module.css
+++ b/src/components/button-icon/ButtonIcon.module.css
@@ -99,3 +99,12 @@
     margin: 0;
     cursor: pointer;
 }
+
+.checkboxDisabled {
+    opacity: 0.5;
+    cursor: not-allowed;
+}
+
+.checkboxDisabled input {
+    cursor: not-allowed;
+}
