--- a/src/react/HomeScreen.module.css
+++ b/src/react/HomeScreen.module.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     align-items: center;
     padding: 24px 20px;
-    min-height: calc(100vh - 50px);
+    flex: 1;
 }
 
 .tileGrid {
