--- a/src/components/schema/SchemaPage.module.css
+++ b/src/components/schema/SchemaPage.module.css
@@ -9,6 +9,7 @@
 
 .schemaContainerInline {
     height: calc(100vh - 70px);
+    min-height: 0;
     margin: -20px;
     margin-bottom: 0;
 }
@@ -18,6 +19,7 @@
     flex: 1;
     display: flex;
     flex-direction: column;
+    overflow: hidden;
     border-right: 1px solid var(--border-color);
     transition: flex 0.3s linear;
 }
@@ -117,6 +119,7 @@
     flex: 0 0 66.666%;
     display: flex;
     flex-direction: column;
+    overflow: hidden;
     background-color: var(--bg-primary);
 }
 
